--- a/components/gaspardo/Zagotovka.module.scss
+++ b/components/gaspardo/Zagotovka.module.scss
@@ -3,12 +3,18 @@
   flex-wrap: wrap;
 
   .item {
-    flex-basis: 33%;
-    width: 280px;
+    flex-basis: 35%;
     height: 350px;
     border: solid 1px #d8d8d8;
     margin: 10px 0 10px 10px;
     padding: 15px;
   }
+}
+
+.subcategory {
+  display: inline-block;
+  font-size: 30px;
+  background-color: #ea3323;
+  color: white;
 }
 
