--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,12 +2,30 @@
 }
 
 .main {
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+}
+
+.main:before {
+  content: '';
+  position: absolute;
+  //top: 0;
+  background-image: url("/assets/brand-combain.jpg");
+
+  /* Full height */
+  height: 85%;
+  width: 100%;
+
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.3;
+  //padding: 4rem 0;
+  //flex: 1;
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: center;
+  //align-items: center;
 }
 
 .footer {
@@ -24,12 +42,4 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-}
-
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
