--- a/components/gaspardo/Zagotovka.module.scss
+++ b/components/gaspardo/Zagotovka.module.scss
@@ -1,3 +1,5 @@
+@import "styles/Common.module";
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -9,12 +11,5 @@
     margin: 10px 0 10px 10px;
     padding: 15px;
   }
-}
-
-.subcategory {
-  display: inline-block;
-  font-size: 30px;
-  background-color: #ea3323;
-  color: white;
 }
 
