--- a/components-common/Aside.module.scss
+++ b/components-common/Aside.module.scss
@@ -1,7 +1,10 @@
 .aside {
+  margin-right: 10px;
   position: sticky;
-  top: 40px;
-  height: 100vh;
+  top: 60px;
+  height: 88.8vh;
+  padding-top: 55px;
+  background-color: #f6f6f6;
 }
 
 .active {
@@ -11,6 +14,6 @@
 .item {
   padding-left: 20px;
   font-family:  'Roboto', 'Arial Narrow', sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
 }
