--- a/components-common/Navbar.module.scss
+++ b/components-common/Navbar.module.scss
@@ -1,9 +1,15 @@
 .navbar {
   display: flex;
   align-items: center;
-  margin-top: 30px;
   height: 90px;
   width: 100%;
+
+  background-color: #f1f1f1;
+  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+  position: fixed; /* Sticky/fixed navbar */
+  top: 0; /* At the top */
+  z-index: 1;
+
   background-color: red;
   color: red;
 }
@@ -11,6 +17,10 @@
 .brand {
   padding-left: 15px;
   flex-basis: 50%;
+}
+
+.navimg {
+  cursor: pointer;
 }
 
 .ml15 {
@@ -32,7 +42,6 @@
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
 }
 
 .dropdown_content a {
@@ -40,6 +49,8 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  position: relative;
+  background-color: white;
 }
 
 .dropdown_content a:hover {background-color: #ddd;}
