--- a/components/opal/OpalKultivaciya.module.scss
+++ b/components/opal/OpalKultivaciya.module.scss
@@ -1,10 +1,11 @@
 .product_container {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 10px;
 }
 
 .product_box {
-  max-width: 45%;
+  max-width: 47%;
   border: solid 1px #d8d8d8;
   padding: 15px;
   height: 450px;
