spare parts for maschio added

--- a/styles/Common.module.scss
+++ b/styles/Common.module.scss
@@ -4,3 +4,13 @@
   background-color: #ea3323;
   color: white;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+
+.ml30 {
+  margin-left: 30px;
+}
