--- a/components-common/Navbar.module.scss
+++ b/components-common/Navbar.module.scss
@@ -30,7 +30,12 @@
 }
 
 .menu {
-  color: black;
+color: black;
+  a {
+    font-family: 'Roboto', 'Arial', sans-serif;
+    color: black;
+    text-decoration: none;
+  }
 }
 
 .dropdown {
