--- a/components-common/Navbar.module.scss
+++ b/components-common/Navbar.module.scss
@@ -29,6 +29,14 @@
   margin-left: 15px;
 }
 
+.signout {
+  margin-left: auto;
+  margin-right: 30px;
+  font-family: 'Roboto', 'Arial', sans-serif;
+  color: black;
+  text-decoration: none;
+}
+
 .menu {
 color: black;
   a {
