--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,70 +1,233 @@
 @import "styles/globals";
+@font-face {
+  font-family: 'Oswald';
+  src: url('../public/assets/oswald/Oswald-Light.ttf');
+  src: url('../public/assets/oswald/Oswald-Medium.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
 
 .container {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 90px);
+}
+
+.subcontainer {
+  display: flex;
+  flex-basis: 25%;
+}
+
+.item {
+  //flex-basis: 50%;
+  width: 50%;
+}
+
+%base-img {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+%intern-img {
+  width: 50%;
+  position: relative;
+
+  &:after {
+    @extend %base-img;
+  }
+
+}
+
+.pochva {
+  @extend %intern-img;
+
+  &:after {
+    background-image: url("/assets/m_pochva.jpg");
+  }
+}
+
+.posev {
+  @extend %intern-img;
+
+  &:after {
+    background-image: url("/assets/posev.jpg");
+  }
+}
+
+.oprisk {
+  @extend %intern-img;
+
+  &:after {
+    background-image: url("/assets/oprisk.jpg");
+  }
+
+}
+
+.kosilka {
+  @extend %intern-img;
+
+  &:after {
+    background-image: url("/assets/kosilka.jpg");
+  }
+
 }
 
 .hdr {
-  font-family: 'Roboto', 'Arial', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 50px;
   font-weight: 500;
+  font-style: italic;
+  color: #790d67;
   margin-left: 10px;
-  color: #ffffff;
-  background-color: #fc0011;
   padding: 10px;
+  animation:  pulse 0.5s ease-out;
+
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: #7bbb95;
+    opacity: 1;
+    //transition: opacity 300ms, transform 300ms;
+    animation: underline 0.5 ease-in-out;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: translateY(60px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes underline {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0.2em, 0);
+  }
 }
 
 .section {
-  margin-top: 270px;
-  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-top: -55px;
+  overflow: hidden;
 }
 
 .off_dealers {
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 35px;
   font-weight: 500;
+  margin-right: 50px;
 }
 
 .balls_root {
   display: flex;
   margin-top: 30px;
+  margin-right: 30px;
 
   .dot {
-    height: 200px;
-    width: 200px;
+    height: 140px;
+    width: 140px;
     background-color: #ffffff;
     border-radius: 50%;
-  }
-
-  .dot:first-child {
-    z-index: 4;
+    border: 1px solid;
+    animation-name: logo;
   }
 
   .maschio_logo {
-    width: 135px;
-    margin-top: 33px;
-    margin-left: 30px;
+    width: 93px;
+    margin-top: 25px;
+    margin-left: 23px;
   }
 
   .gates_logo {
-    width: 170px;
-    margin-top: 60px;
+    width: 115px;
+    margin-top: 45px;
     margin-left: 15px;
   }
 
   .pwgroup_logo {
-    width: 187px;
-    margin-top: 88px;
+    width: 126px;
+    margin-top: 62px;
     margin-left: 8px;
   }
 
+  .frank_logo {
+    width: 113px;
+    margin-top: 60px;
+    margin-left: 13px;
+  }
+
+  .lemken_logo {
+    width: 125px;
+    margin-top: 10px;
+  }
+
+  .grimme_logo {
+    width: 115px;
+    margin-top: 60px;
+    margin-left: 16px;
+  }
+
+  .dot:first-child {
+    z-index: 1;
+    animation-duration: 0.5s;
+  }
+
   .dot:nth-child(2) {
-    z-index: 3;
+    z-index: 2;
     margin-left: -10px;
+    animation-duration: 1s;
   }
 
   .dot:nth-child(3) {
     z-index: 2;
     margin-left: -10px;
+    animation-duration: 1.5s;
+  }
+
+  .dot:nth-child(4) {
+    z-index: 2;
+    margin-left: -10px;
+    animation-duration: 2s;
+  }
+
+  .dot:nth-child(5) {
+    z-index: 2;
+    margin-left: -10px;
+    animation-duration: 2.5s;
+  }
+
+  .dot:nth-child(6) {
+    z-index: 2;
+    margin-left: -10px;
+    animation-duration: 3s;
+  }
+
+  @keyframes logo {
+    0% {
+      transform: translateY(150px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
   }
 
   //.dot:before {
@@ -79,6 +242,7 @@
 
 .main {
   margin-top: calc(#{$navbar-height} + 15px);
+  overflow: hidden;
 
   header {
     display: flex;
@@ -94,7 +258,7 @@
   background-image: url("/assets/brand-combain.jpg");
 
   /* Full height */
-  height: 88.9%;
+  height: 93.3vh;
   width: 100%;
 
 
@@ -122,3 +286,15 @@
 //  align-items: center;
 //  flex-grow: 1;
 //}
+
+.intro {
+  font-family: "Oswald", sans-serif;
+  font-size: 18px;
+  width: 387px;
+  position: absolute;
+  display: block;
+  left: 40px;
+  padding-top: 30px;
+  color: #790d67;
+}
+
