--- a/styles/Address.module.scss
+++ b/styles/Address.module.scss
@@ -1,6 +1,10 @@
+@import "styles/globals";
+
 .container {
   padding: 15px 3%;
-  margin-top: 60px;
+  margin-top: 75px;
+  position: relative;
+  height: calc(100vh - #{$navbar-height});
 }
 
 
@@ -18,4 +22,14 @@
 
 .mb15 {
   margin-bottom: 15px;
+}
+
+.hdr_addr {
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.subhdr {
+  font-size: 24px;
 }
