--- a/styles/Spare.module.scss
+++ b/styles/Spare.module.scss
@@ -20,6 +20,7 @@ $navbar-height: 90px;
     display: flex;
     flex-direction: column;
     padding-left: 10px;
+    position: fixed;
 }
 
 .item {
