--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -279,10 +279,10 @@
   margin-top: auto;
   position: relative;
   background-image: url("/assets/brand-combain-edited.jpg");
-  background-position: center;
+  //background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 55%;
+  height: 70%;
   opacity: 0.5;
 }
 
