--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,13 @@ a {
   height: 100%;
 }
 
-#__next > div{
+#__next > div {
   height: 100vh;
+
+}
+
+@media (max-width: 768px) {
+  #__next > div {
+    height: unset;
+  }
 }
