--- a/components-common/Navbar.module.scss
+++ b/components-common/Navbar.module.scss
@@ -12,6 +12,13 @@
   z-index: 2;
 
   background-color: #ff6440;
+  //background: linear-gradient(to left, #f46b45, #eea849);
+
+  @media (max-width: 768px) {
+    height: $navbar-height-mob;
+    justify-content: space-between;
+    width: 100vw;
+  }
 }
 
 .brand {
@@ -22,6 +29,11 @@
 .navimg {
   cursor: pointer;
   transform: translateX(150px);
+
+  @media (max-width: 768px) {
+    transform: unset;
+    width: 50vw;
+  }
 }
 
 .ml15 {
@@ -40,6 +52,16 @@
   font-family: 'Roboto', 'Arial', sans-serif;
   color: black;
   text-decoration: none;
+}
+
+.hamburger {
+  display: none;
+
+  @media (max-width: 768px) {
+    display: block;
+    margin-right: 10vw;
+  }
+
 }
 
 .menu {
@@ -89,6 +111,12 @@
     }
 
   }
+
+  @media (max-width: 768px) {
+    a {
+      display: none;
+    }
+  }
 }
 
 @keyframes menu-top {
@@ -113,37 +141,3 @@
   }
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown_content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown_content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  position: relative;
-  background-color: white;
-}
-
-.dropdown_content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown_content {display: block;}
-
-.line {
-  width: 97px;
-  position: absolute;
-  transform: translateX(120px) translateY(-1px);
-  height: 40px;
-
-  transition: all 0.5s ease-out;
-}
