--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,6 +15,10 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 90px);
+
+  @media (max-width: 768px) {
+    height: unset;
+  }
 }
 
 .gasp_container {
@@ -107,6 +111,11 @@
 
   position: relative;
 
+  @media (max-width: 768px) {
+    font-size: 10vw;
+  }
+
+
   &:after {
     content: '';
     position: absolute;
@@ -147,6 +156,12 @@
   margin-top: -55px;
   overflow: hidden;
   padding-bottom: 30px;
+
+
+  @media (max-width: 768px) {
+    margin-top: 10vw;
+    align-items: unset;
+  }
 }
 
 .off_dealers {
@@ -154,6 +169,11 @@
   font-size: 35px;
   font-weight: 500;
   margin-right: 50px;
+
+  @media (max-width: 768px) {
+    margin: 0 auto;
+    font-size: 8vw;
+  }
 }
 
 .hdr_maschio {
@@ -167,6 +187,12 @@
   margin-top: 30px;
   margin-right: 30px;
 
+  @media (max-width: 768px) {
+    margin-right: unset;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .dot {
     height: 140px;
     width: 140px;
@@ -174,6 +200,12 @@
     border-radius: 50%;
     border: 1px solid;
     animation-name: logo;
+
+
+    @media (max-width: 768px) {
+      //height: 18vw;
+      //width: 18vw;
+    }
   }
 
   .maschio_logo {
@@ -220,6 +252,10 @@
     z-index: 2;
     margin-left: -10px;
     animation-duration: 1s;
+
+    @media (max-width: 768px) {
+      z-index: 1;
+    }
   }
 
   .dot:nth-child(3) {
@@ -268,6 +304,12 @@
 .main {
   margin-top: calc(#{$navbar-height} + 15px);
   overflow: hidden;
+
+
+  @media (max-width: 768px) {
+    margin-top: 20vw;
+    //height: 290vh;
+  }
 
   header {
     display: flex;
@@ -341,5 +383,12 @@
   padding-top: 30px;
   color: #332A1C;
   z-index: 1;
+
+  @media (max-width: 768px) {
+    width: 70vw;
+    position: unset;
+    font-size: 4vw;
+    margin: 0 auto;
+  }
 }
 
