--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -289,6 +289,9 @@
     z-index: 2;
     margin-left: -10px;
     animation-duration: 3s;
+    @media (max-width: 768px) {
+      z-index: 1;
+    }
   }
 
   @keyframes logo {
