--- a/styles/Claas.module.scss
+++ b/styles/Claas.module.scss
@@ -24,6 +24,7 @@
   height: calc(100vh - 90px);
   align-items: center;
   padding-top: 50px;
+
   @media (max-width: 768px) {
     width: unset;
     height: unset;
@@ -122,6 +123,10 @@
   justify-content: space-between;
   flex-grow: 1;
 
+  @media (max-width: 768px) {
+    flex-direction: column;
+    width: 95vw;
+  }
 }
 
 .tyre-card {
@@ -131,6 +136,10 @@
 .tyre {
   height: 250px;
   width: 360px;
+  @media (max-width: 768px) {
+    width: 100%;
+    height: 80%;
+  }
 }
 
 .t_txt {
@@ -250,6 +259,18 @@
   }
 }
 
+.logo {
+  @media (max-width: 768px) {
+    width: 15vw;
+  }
+}
+
+.oil_big {
+  @media (max-width: 768px) {
+    width: 30vw;
+  }
+}
+
 .item {
   display: flex;
   flex-direction: column;
@@ -259,11 +280,18 @@
   margin: auto;
   font-family: 'Roboto', 'Arial', sans-serif;
   padding: 90px;
+  @media (max-width: 768px) {
+    padding: unset;
+  }
+
 }
 
 .table {
   width: 650px;
   border: 1px solid;
+  @media (max-width: 768px) {
+    width: 99vw;
+  }
 }
 
 .intro {
