--- a/styles/Spare.module.scss
+++ b/styles/Spare.module.scss
@@ -196,6 +196,9 @@ $menu-width-mob: 95vw;
         }
     //}
 
+    @media (max-width: 768px) {
+        overflow-wrap: anywhere;
+    }
 }
 
 .item_sub {
